--- a/index.html
+++ b/index.html
@@ -4,16 +4,10 @@
 <head>
 
 	<meta charset="UTF-8">
-	<title>CoderBay</title>
-
-	<!-- jQuery -->
+	<title>Train Time</title>
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-
-	<!-- Bootstrap CDN-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-	<!-- Firebase Reference -->
 	<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
 
 </head>
@@ -24,12 +18,11 @@
 
 		<br>
 
-		<!-- Jumbotron Title -->
 		<div class="jumbotron">
-			<h1 class="text-center">Any Time is Train Time</h1>
-			<h3 class="text-center">Cooh Choo. Chee Chee.</h3>
+			<h1 class="text-center">Anytime is Train Time</h1>
+			<h3 class="text-center">Choo Choo. Chee Chee.</h3>
 		</div>
-		<!-- Current Product -->
+
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="panel panel-default">
@@ -44,12 +37,12 @@
 										<tr>
 											<th>Train Name</th>
 											<th>Destination</th>
-											<th>Frequency (min.)</th>
+											<th>Frequency (min)</th>
 											<th>Next Arrival</th>
 											<th>Minutes Away</th>
 										</tr>
 									</thead>
-									<tbody id="schedule">
+									<tbody id="employeeInfo">
 
 									</tbody>
 
@@ -61,7 +54,7 @@
 				</div>
 			</div>
 
-			<!-- Make Your Bid -->
+
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="panel panel-default">
@@ -71,22 +64,22 @@
 						<div class="panel-body">
 							<form>
 								<div class="form-group">
-									<label for="bidder-name">Train Name</label>
-									<input class="form-control" id="bidder-name" type="text">
+									<label for="">Tain Name</label>
+									<input class="form-control" id="trainName" type="text">
 								</div>
 								<div class="form-group">
-									<label for="bidder-price">Destination</label>
-									<input class="form-control" id="bidder-price" type="number">
+									<label for="">Destination</label>
+									<input class="form-control" id="destination" type="text">
 								</div>
 								<div class="form-group">
-									<label for="bidder-price">First Tain Time (HH:mm - military time)</label>
-									<input class="form-control" id="bidder-price" type="number">
+									<label for="">First Train Time (HH:MM - military time)</label>
+									<input class="form-control" id="nextArrival" type="text">
 								</div>
 								<div class="form-group">
-									<label for="bidder-price">Frequency (min)</label>
-									<input class="form-control" id="bidder-price" type="number">
+									<label for="">Frequency (min)</label>
+									<input class="form-control" id="frequency" type="number">
 								</div>
-								<button class="btn btn-primary" id="submit-bid" type="submit">Submit</button>
+								<button class="btn btn-primary" id="btn" type="submit">Submit</button>
 							</form>
 						</div>
 					</div>
@@ -97,6 +90,7 @@
 		</div>
 
 		<!-- JavaScript -->
+		<script src="https://momentjs.com/downloads/moment.min.js"></script>
 		<script src="logic.js"></script>
 
 </body>
